[gd_scene load_steps=5 format=3 uid="uid://smq7lywpad8s"]

[ext_resource type="Script" path="res://scripts/player_ui.gd" id="1_f8e0a"]
[ext_resource type="Texture2D" uid="uid://bep334rvl8xgu" path="res://assets/Hearts/PNG/animated/border/heart_animated_1.png" id="1_isyx6"]
[ext_resource type="Texture2D" uid="uid://bpuhh1frh0a6q" path="res://assets/UI/coin2.png" id="2_o4ose"]
[ext_resource type="Texture2D" uid="uid://4p1apmnuba5d" path="res://assets/UI/score.png" id="3_p0vs0"]

[node name="Player UI" type="CanvasLayer"]
script = ExtResource("1_f8e0a")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 114.0
offset_bottom = 131.0
color = Color(0.176471, 0.176471, 0.176471, 0.686275)

[node name="HealthLabel" type="Label" parent="."]
offset_left = 46.0
offset_right = 97.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "100"

[node name="CoinLabel" type="Label" parent="."]
offset_left = 50.0
offset_top = 44.0
offset_right = 78.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 30
text = "0
"

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 51.0
offset_top = 85.0
offset_right = 79.0
offset_bottom = 127.0
theme_override_font_sizes/font_size = 30
text = "0
"

[node name="Health" type="Sprite2D" parent="."]
position = Vector2(21.75, 21.75)
scale = Vector2(2.26471, 2.26471)
texture = ExtResource("1_isyx6")
hframes = 5

[node name="Coin" type="Sprite2D" parent="."]
position = Vector2(22, 64)
scale = Vector2(0.0205853, 0.0205853)
texture = ExtResource("2_o4ose")

[node name="Score" type="Sprite2D" parent="."]
position = Vector2(23, 108)
scale = Vector2(0.0727539, 0.0727539)
texture = ExtResource("3_p0vs0")
